--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>DenMusic</title>
 </head>
 <body>
-    <header>Шапка</header>
+    <header>
+        <h1>Суперско мой сайт погнал</h1></header>
     <main>Основной контент
         <u><li>Изображение</li>
             <li>Текст</li>
