--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Суперско мой сайт погнал</h1></header>
+        <h1>          ШКОЛА ФОРТЕПИАНО "DENMUSIC"</h1></header>
     <main>Основной контент
         <u><li>Изображение</li>
             <li>Текст</li>
