--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
 </head>
 <body>
     <header>
-        <h1>ШКОЛА ФОРТЕПИАНО</h1></header>
+        <h1>ШКОЛА ФОРТЕПИАНО</h1>
+     <p>проверка что это такое</p>
+    </header>
     <main>Основной контент
+        <article>
+            <section> 
+                <h2>Секция номер 1</h2>
+                <p>какой-то рассказик</p>
+                <img src="images/piano.jpg" alt="это фортепиано">
+            </section>
         <u><li>Изображение</li>
             <li>Текст</li>
             <li>Отзывы</li>
