--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <h1>ШКОЛА ФОРТЕПИАНО</h1>
-     <p>проверка что это такое</p>
+     <p>Научу вас правильно тыкать по клавишам</p>
     </header>
     <main>Основной контент
         <article>
